src/objects/Master_ConfigData_Listing__c.object
<CustomObject>
    <description>To list master configurable data</description>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appraiser Trainee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Listing_Type__c</fullName>
        <label>Listing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Master Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appraisers - Real Estate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue_Id__c</fullName>
        <label>Queue Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Master ConfigData Listing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Listing_Type__c</columns>
        <columns>Program_Type__c</columns>
        <columns>License_Type__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Queue_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Master ConfigData Listing  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master ConfigData Listing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>